@@ -540,7 +540,7 @@ VOID
 lstsym(fp)
 FILE *fp;
 {
-	register int c, i, j, k;
+	register int i, j, k;
 	register char *ptr;
 	int nmsym, narea;
 	struct sym *sp;
